[Mac][Material Design] Fix regression allowing chevron button dragging.

A recent regression left the bookmarks bar's chevron button draggable
when it should not be.

R=avi@chromium.org
BUG=616412

Review-Url: https://codereview.chromium.org/2035843003
Cr-Commit-Position: refs/heads/master@{#397522}

Former-commit-id: 29e90b8c7137c5e83a021a8453de434fc5968255